<resources>
    <string name="app_name">Postmen</string>

    <string name="hello_world">Neue Adresse erstellen</string>
    <string name="action_settings">Einstellungen</string>
    <string name="title_activity_add_adress">Adresse Hinzufügen</string>
    <string name="street">Straße</string>
    <string name="number">Nummer</string>
    <string name="create">Erstellen</string>
    <string name="new_adress">Neue Adresse</string>
    <string name="title_activity_show_adresses">Adressen</string>
    <string name="show_adresses">Zeige alle Adressen</string>
    <string name="Created">Erstellte </string>
    <string name="reset_parcels">Pakete zurücksetzen</string>
    <string name="reset_parcels_done">Pakete zurückgesetzt</string>
    <string name="reset_db">Datenbank zurücksetzen</string>
    <string name="reset_db_done">Datenbank zurückgesetzt</string>
    <string name="addParcels">Pakete hinzufügen</string>
    <string name="addMoney">Geld hinzufügen</string>
    <string name="title_activity_add_parcels">Pakete hinzufügen</string>
    <string name="go_on_tour">Starte Tour</string>
    <string name="title_activity_tour">OnTour</string>
    <string name="are_you_sure">Sind Sie sicher?</string>
    <string name="yes">Ja</string>
    <string name="no">Nein</string>
    <string name="sigRelAut">Abstellgenehmigung</string>
    <string name="sigRelAuts">Abstellgenehmigungen</string>
    <string name="no_data">Keine Daten vorhanden</string>
</resources>
