<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <TextView android:text="@string/hello_world" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView4" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_adress"
        android:id="@+id/NewAdressBtn"
        android:layout_below="@+id/textView4"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="49dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/show_adresses"
        android:id="@+id/ShowAdressesBtn"
        android:layout_below="@+id/NewAdressBtn"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="45dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reset_parcels"
        android:id="@+id/resetParcelsBtn"
        android:layout_below="@+id/ShowAdressesBtn"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="47dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reset_db"
        android:id="@+id/resetDbBtn"
        android:layout_below="@+id/resetParcelsBtn"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="51dp" />

</RelativeLayout>
